Fix some sonar findings (#2149)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>